[package]
name = "gmix"
version = "1.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
derive_more = "0.99.17"
futures = { version = "0.3.21", default-features = false }
glib = "0.17.5"
gstreamer = "0.20.3"
serde = { version = "1.0.130", features = ["derive"] }
tokio = { version = "1.18.1", features = ["full"] }
tokio-util = {version="0.7.7", features=["codec"]}
bytes = "1.4.0"
byteorder = "1.4.3"
clap = { version = "4.1.4", features = ["derive"] }
tracing = { version = "0.1.34" }
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
uuid = {version = "1.3.0", features = ["serde", "v4"]}
serde_json = "1.0.67"